--- a/style.css
+++ b/style.css
@@ -8,4 +8,41 @@ html, body{
     width: 100%;
     height: 100%;
     background-color: antiquewhite;
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+    justify-content: center;
+    align-items: center;
+}
+.boards{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#board1{
+    width: 35vw;
+    height: 35vw;
+    aspect-ratio: 1;
+    background-color: red;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+}
+#board2{
+    width: 35vw;
+    height: 35vw;
+    aspect-ratio: 1;
+    background-color: blue;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);   
+}
+.innerbox{
+    box-sizing: border-box;
+    border: 1px solid black;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
