all thats missing NOW is click orientation own ships, ships can be next to each other which isnt the case in the OG battleship though :(

--- a/style.css
+++ b/style.css
@@ -46,6 +46,6 @@ html, body{
     justify-content: center;
     align-items: center;
 }
-.hide{
-    display: none;
+.dragship{
+    border: 2px solid aqua;
 }
