--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Medieval';
+    src:  url('./fonts/MedievalSharp-Regular.ttf') format('tff'),
+          url('./fonts/MedievalSharp-Regular.woff') format('woff');
+  }
 
 html, body{
     height: 100%;
@@ -5,8 +10,9 @@ html, body{
     margin: 0;
 }
 .container{
+    box-sizing: border-box;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: antiquewhite;
     display: flex;
     flex-direction: column;
@@ -16,9 +22,21 @@ html, body{
 }
 .boards{
     width: 100%;
+    height: 50%;
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+.buttonbox{
+    height: 30%;
+    display: flex;
+    align-items: center;
+}
+button{
+    padding: 20px;
+    background-color: aquamarine;
+    margin: 10px;
+    border-radius: 20px;
 }
 #board1{
     width: 35vw;
@@ -47,5 +65,10 @@ html, body{
     align-items: center;
 }
 .dragship{
-    border: 2px solid aqua;
+    border: 3px solid black;
+}
+h1{
+    font-family: 'Medieval', Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 3em;
+    font-weight: bolder;
 }
