--- a/style.css
+++ b/style.css
@@ -34,9 +34,12 @@ html, body{
 }
 button{
     padding: 20px;
-    background-color: aquamarine;
     margin: 10px;
     border-radius: 20px;
+    font-weight: bolder;
+    font-size: large;
+    background-color: black;
+    color: white;
 }
 #board1{
     width: 35vw;
